--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/part-1.css">
+    <link rel="stylesheet" href="css/part-2.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;800&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -30,9 +34,34 @@
                 <li class="icon-li"><a class="icon-font" href="https://www.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a></li>
             </ul>
         </div>
+        <div class="line"></div>
+        <div class="navigation max-width flex">
+            <h1>Noxia<span>.</span></h1>
+            <div class="flex">
+                <nav>
+                    <ul class="flex">
+                        <li><a class="muli" href="#">Home</a></li>
+                        <li><a class="muli" href="#">Pages</a></li>
+                        <li><a class="muli" href="#">Portfoio</a></li>
+                        <li><a class="muli" href="#">Shortcodes</a></li>
+                        <li><a class="muli" href="#">Blog</a></li>
+                        <li><a class="muli" href="#">Shop</a></li>
+                    </ul>
+                </nav>
+                <div class="flex">
+                    <a href="#"><img src="images/Cart.png" alt="cart"></a>
+                    <a href="#"><img src="images/Search.png" alt="search"></a>
+                </div>                
+            </div>
+        </div>
+        <div class="bg-color">
+            <div class="align">
+                <h2 class="glacial">Blog  Single</h2>
+                <p class="muli flex"><span>Home</span> <i class="fa-solid fa-angle-right"></i> <span>Pages</span> <i class="fa-solid fa-angle-right"></i> About Our Company</p>
+            </div>
+        </div>
     </header>
     <main>
-        <section></section>
     </main>
 </body>
 
