--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/part-1.css">
     <link rel="stylesheet" href="css/part-2.css">
+    <link rel="stylesheet" href="css/part-3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -23,15 +24,21 @@
         <div class="max-width flex">
             <!-- mail and phone -->
             <ul class="contact-size flex muli">
-                <li><img class="mail" src="images/mail.png" alt="mail"><a class="font-style" href="mailto:hello@mexo.com">hello@mexo.com</a></li>
-                <li><img class="tel" src="images/tel.png" alt="tel"><a class="font-style" href="tel:+8 800 567.890.11">8 800 567.890.11</a></li>
+                <li><img class="mail" src="images/mail.png" alt="mail"><a class="font-style"
+                        href="mailto:hello@mexo.com">hello@mexo.com</a></li>
+                <li><img class="tel" src="images/tel.png" alt="tel"><a class="font-style" href="tel:+8 800 567.890.11">8
+                        800 567.890.11</a></li>
             </ul>
             <!-- social links -->
             <ul class="icon-box flex">
-                <li class="icon-li"><a class="icon-font" href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook-f"></i></a></li>
-                <li class="icon-li"><a class="icon-font" href="https://twitter.com/" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
-                <li class="icon-li"><a class="icon-font" href="https://plus.google.com/" target="_blank"><i class="fa-brands fa-google-plus-g"></i></a></li>
-                <li class="icon-li"><a class="icon-font" href="https://www.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                <li class="icon-li"><a class="icon-font" href="https://www.facebook.com/" target="_blank"><i
+                            class="fa-brands fa-facebook-f"></i></a></li>
+                <li class="icon-li"><a class="icon-font" href="https://twitter.com/" target="_blank"><i
+                            class="fa-brands fa-twitter"></i></a></li>
+                <li class="icon-li"><a class="icon-font" href="https://plus.google.com/" target="_blank"><i
+                            class="fa-brands fa-google-plus-g"></i></a></li>
+                <li class="icon-li"><a class="icon-font" href="https://www.linkedin.com/" target="_blank"><i
+                            class="fa-brands fa-linkedin-in"></i></a></li>
             </ul>
         </div>
         <div class="line"></div>
@@ -51,17 +58,58 @@
                 <div class="flex">
                     <a href="#"><img src="images/Cart.png" alt="cart"></a>
                     <a href="#"><img src="images/Search.png" alt="search"></a>
-                </div>                
+                </div>
             </div>
         </div>
         <div class="bg-color">
             <div class="align">
-                <h2 class="glacial">Blog  Single</h2>
-                <p class="muli flex"><span>Home</span> <i class="fa-solid fa-angle-right"></i> <span>Pages</span> <i class="fa-solid fa-angle-right"></i> About Our Company</p>
+                <h2 class="glacial">Blog Single</h2>
+                <p class="muli flex"><span>Home</span> <i class="fa-solid fa-angle-right"></i> <span>Pages</span> <i
+                        class="fa-solid fa-angle-right"></i> About Our Company</p>
             </div>
         </div>
     </header>
     <main>
+        <div class="main-content">
+            <section>
+                <div class="gery-cube"></div>
+                <p class="author glacial">
+                    Posted by <span>Jessica Doen,</span> 6 October 
+                    <span>
+                        <img class="heart" src="images/heart.png" alt="heart">63
+                    </span>
+                </p>
+                <article class="article-pos muli">
+                    <h2 class="article-header glacial-bold">
+                        Dr. Gulati Wants To Take A Shower - The
+                        Kapil Sharma Show
+                    </h2>
+                    <p class="par1-font">
+                        The European languages are members of the same family. Their separate existence is a myth. For
+                        science, music, sport, etc, Europe uses the same vocabulary. The languages only differ in their
+                        grammar, their pronunciation and their most common words. Everyone realizes why a new common
+                        language would be desirable: one could refuse to pay expensive translators. To achieve this, it
+                        would be necessary to have uniform grammar, pronunciation
+                    </p>
+                    <span class="border"></span>
+                    <p class="par2-font">
+                        We are a team that working on graphic design goodies. Making mock ups, taking stock photos and
+                        preparing awesome graphic design templates.
+                    </p>
+                    <p class="par1-font">
+                        The European languages are members of the same family. Their separate existence is a myth. For
+                        science, music, sport, etc, Europe uses the same vocabulary. The languages only differ in their
+                        grammar, their pronunciation and their most common words. Everyone realizes why a new common
+                        language would be desirable: one could refuse to pay expensive translators. To achieve this, it
+                        would be necessary to have uniform grammar, pronunciation
+                    </p>
+                    <div class="chat modelica">
+                        <img src="images/chat-1.png" alt="chat">02
+                    </div>
+                </article>
+            </section>
+        </div>
+        <div class="sidebar-content"></div>
     </main>
 </body>
 
