--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
     <link rel="stylesheet" href="css/part-1.css">
     <link rel="stylesheet" href="css/part-2.css">
     <link rel="stylesheet" href="css/part-3.css">
+    <link rel="stylesheet" href="css/part-4.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;800&family=Raleway:wght@800&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -74,7 +75,7 @@
             <section>
                 <div class="gery-cube"></div>
                 <p class="author glacial">
-                    Posted by <span>Jessica Doen,</span> 6 October 
+                    Posted by <span>Jessica Doen,</span> 6 October
                     <span>
                         <img class="heart" src="images/heart.png" alt="heart">63
                     </span>
@@ -84,19 +85,19 @@
                         Dr. Gulati Wants To Take A Shower - The
                         Kapil Sharma Show
                     </h2>
-                    <p class="par1-font">
+                    <p class="par1-font par1-magrin">
                         The European languages are members of the same family. Their separate existence is a myth. For
                         science, music, sport, etc, Europe uses the same vocabulary. The languages only differ in their
                         grammar, their pronunciation and their most common words. Everyone realizes why a new common
                         language would be desirable: one could refuse to pay expensive translators. To achieve this, it
                         would be necessary to have uniform grammar, pronunciation
                     </p>
-                    <span class="border"></span>
+                    <span class="border float-left"></span>
                     <p class="par2-font">
                         We are a team that working on graphic design goodies. Making mock ups, taking stock photos and
                         preparing awesome graphic design templates.
                     </p>
-                    <p class="par1-font">
+                    <p class="par1-font par1-magrin">
                         The European languages are members of the same family. Their separate existence is a myth. For
                         science, music, sport, etc, Europe uses the same vocabulary. The languages only differ in their
                         grammar, their pronunciation and their most common words. Everyone realizes why a new common
@@ -107,6 +108,32 @@
                         <img src="images/chat-1.png" alt="chat">02
                     </div>
                 </article>
+            </section>
+            <section>
+                <h2 class="h2-font h2-margin glacial-bold">
+                    Blog H2 Heading Title / Download Example
+                </h2>
+                <p class="muli margin-bt par1-font par1-letters">
+                    The European languages are members of the same family. Their separate existence is a myth. For
+                    science, music, sport, etc, Europe uses the same vocabulary. The languages only differ in their
+                    grammar, their pronunciation and their most common words.
+                </p>
+                <div class="flex">
+                    <div>
+                        <ul class="ulist-margin glacial">
+                            <li class="list-font"><i class="fa-brands fa-font-awesome"></i>Maecenas quis nulla sit amet mi sodales venenatis.</li>
+                            <li class="list-font"><i class="fa-brands fa-font-awesome"></i>Fusce malesuada lacus eget mi hendrerit, in pretium</li>
+                            <li class="list-font"><i class="fa-brands fa-font-awesome"></i>felis rhoncus.</li>
+                            <li class="list-font"><i class="fa-brands fa-font-awesome"></i>Etiam hendrerit ante ornare mauris</li>
+                            <li class="list-font"><i class="fa-brands fa-font-awesome"></i>Sed at elit vehicula, luctus nibh vel, tincidunt tellus.</li>
+                        </ul>
+                        <button class="download-btn glacial-bold">DOWNLOAD <img src="images/Download.png" alt="Download"></button>
+                    </div>
+                    <div>
+                        <span class="ad-font raleway">ADVERTISING</span>
+                        <div class="gradient"></div>
+                    </div>
+                </div>
             </section>
         </div>
         <div class="sidebar-content"></div>
