--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
     <link rel="stylesheet" href="css/part-2.css">
     <link rel="stylesheet" href="css/part-3.css">
     <link rel="stylesheet" href="css/part-4.css">
+    <link rel="stylesheet" href="css/part-5.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;800&family=Raleway:wght@800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;800&family=Raleway:wght@800&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -32,14 +34,26 @@
             </ul>
             <!-- social links -->
             <ul class="icon-box flex">
-                <li class="icon-li"><a class="icon-font" href="https://www.facebook.com/" target="_blank"><i
-                            class="fa-brands fa-facebook-f"></i></a></li>
-                <li class="icon-li"><a class="icon-font" href="https://twitter.com/" target="_blank"><i
-                            class="fa-brands fa-twitter"></i></a></li>
-                <li class="icon-li"><a class="icon-font" href="https://plus.google.com/" target="_blank"><i
-                            class="fa-brands fa-google-plus-g"></i></a></li>
-                <li class="icon-li"><a class="icon-font" href="https://www.linkedin.com/" target="_blank"><i
-                            class="fa-brands fa-linkedin-in"></i></a></li>
+                <li class="icon-li">
+                    <a class="icon-font" href="https://www.facebook.com/" target="_blank">
+                        <i  class="fa-brands fa-facebook-f"></i>
+                    </a>
+                </li>
+                <li class="icon-li">
+                    <a class="icon-font" href="https://twitter.com/" target="_blank">
+                        <i class="fa-brands fa-twitter"></i>
+                    </a>
+                </li>
+                <li class="icon-li">
+                    <a class="icon-font" href="https://plus.google.com/" target="_blank">
+                        <i class="fa-brands fa-google-plus-g"></i>
+                    </a>
+                </li>
+                <li class="icon-li">
+                    <a class="icon-font" href="https://www.linkedin.com/" target="_blank">
+                        <i class="fa-brands fa-linkedin-in"></i>
+                    </a>
+                </li>
             </ul>
         </div>
         <div class="line"></div>
@@ -109,7 +123,7 @@
                     </div>
                 </article>
             </section>
-            <section>
+            <section class="section-margin">
                 <h2 class="h2-font h2-margin glacial-bold">
                     Blog H2 Heading Title / Download Example
                 </h2>
@@ -121,18 +135,56 @@
                 <div class="flex">
                     <div>
                         <ul class="ulist-margin glacial">
-                            <li class="list-font"><i class="fa-brands fa-font-awesome"></i>Maecenas quis nulla sit amet mi sodales venenatis.</li>
-                            <li class="list-font"><i class="fa-brands fa-font-awesome"></i>Fusce malesuada lacus eget mi hendrerit, in pretium</li>
+                            <li class="list-font"><i class="fa-brands fa-font-awesome"></i>Maecenas quis nulla sit amet
+                                mi sodales venenatis.</li>
+                            <li class="list-font"><i class="fa-brands fa-font-awesome"></i>Fusce malesuada lacus eget mi
+                                hendrerit, in pretium</li>
                             <li class="list-font"><i class="fa-brands fa-font-awesome"></i>felis rhoncus.</li>
-                            <li class="list-font"><i class="fa-brands fa-font-awesome"></i>Etiam hendrerit ante ornare mauris</li>
-                            <li class="list-font"><i class="fa-brands fa-font-awesome"></i>Sed at elit vehicula, luctus nibh vel, tincidunt tellus.</li>
+                            <li class="list-font"><i class="fa-brands fa-font-awesome"></i>Etiam hendrerit ante ornare
+                                mauris</li>
+                            <li class="list-font"><i class="fa-brands fa-font-awesome"></i>Sed at elit vehicula, luctus
+                                nibh vel, tincidunt tellus.</li>
                         </ul>
-                        <button class="download-btn glacial-bold">DOWNLOAD <img src="images/Download.png" alt="Download"></button>
+                        <button class="download-btn glacial-bold">DOWNLOAD <img src="images/Download.png"
+                                alt="Download"></button>
                     </div>
                     <div>
                         <span class="ad-font raleway">ADVERTISING</span>
                         <div class="gradient"></div>
                     </div>
+                </div>
+            </section>
+            <section>
+                <h2 class="h2-font part5-header glacial-bold">
+                    Blog H2 Heading Title
+                </h2>
+                <div class="gery-cube dark"></div>
+                <p class="muli par1-font par5-margin">
+                    The European languages are members of the same family. Their separate existence is a myth. For
+                    science, music, sport, etc, Europe uses the same vocabulary. The languages only differ in their
+                    grammar, their pronunciation and their most common words. Everyone realizes why a new common
+                    language would be desirable: one could refuse to pay expensive translators. To achieve this, it
+                    would be necessary to have uniform grammar, pronunciation and more common words. If several
+                    languages coalesce, the grammar of the resulting language is more simple and regular than that of
+                    the individual languages. The new common language will be more simple and regular than the existing
+                    European languages. It will be as simple as Occidental; in fact, it will be Occidental. To an
+                    English person, it will seem like simplified English, as a skeptical Cambridge friend of mine told
+                    me what Occidental is.The European languages are members of the same family. Their separate
+                    existence is a myth. guages only differ in their grammar, their pronunciation and their most common
+                    words. Everyone realizes why a new common language would be
+                </p>
+                <div class="soc-links flex glacial">
+                    <div class="soc-box"><i  class="fa-brands fa-facebook-f"></i>Facebook</div>
+                    <div class="soc-box"><i class="fa-brands fa-twitter"></i>twitter</div>
+                    <div class="soc-box"><i class="fa-brands fa-google-plus-g"></i>google plus</div>
+                    <div class="soc-box"><i class="fa-brands fa-pinterest-p"></i>pinterest</div>
+                </div>
+                <div class="note flex">
+                    <div class="flex">
+                        <img src="images/note.png" alt="note">
+                        <p class="muli">Elegant, Responsive, Web Design, PSD Template</p>
+                    </div>
+                    <span class="glacial">Back to top</span>
                 </div>
             </section>
         </div>
