--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <link rel="stylesheet" href="css/part-3.css">
     <link rel="stylesheet" href="css/part-4.css">
     <link rel="stylesheet" href="css/part-5.css">
+    <link rel="stylesheet" href="css/part-6.css">
+    <link rel="stylesheet" href="css/part-7.css">
+    <link rel="stylesheet" href="css/part-8.css">
+    <link rel="stylesheet" href="css/part-9.css">
+    <link rel="stylesheet" href="css/part-10.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -36,7 +41,7 @@
             <ul class="icon-box flex">
                 <li class="icon-li">
                     <a class="icon-font" href="https://www.facebook.com/" target="_blank">
-                        <i  class="fa-brands fa-facebook-f"></i>
+                        <i class="fa-brands fa-facebook-f"></i>
                     </a>
                 </li>
                 <li class="icon-li">
@@ -174,11 +179,13 @@
                     words. Everyone realizes why a new common language would be
                 </p>
                 <div class="soc-links flex glacial">
-                    <div class="soc-box"><i  class="fa-brands fa-facebook-f"></i>Facebook</div>
+                    <div class="soc-box"><i class="fa-brands fa-facebook-f"></i>Facebook</div>
                     <div class="soc-box"><i class="fa-brands fa-twitter"></i>twitter</div>
                     <div class="soc-box"><i class="fa-brands fa-google-plus-g"></i>google plus</div>
                     <div class="soc-box"><i class="fa-brands fa-pinterest-p"></i>pinterest</div>
                 </div>
+            </section>
+            <section>
                 <div class="note flex">
                     <div class="flex">
                         <img src="images/note.png" alt="note">
@@ -186,9 +193,21 @@
                     </div>
                     <span class="glacial">Back to top</span>
                 </div>
+                <div class="grey-line"></div>
+                <div class="profile flex">
+                    <div class="grey-circle"></div>
+                    <div class="profile-info">
+                        <h3 class="glacial-bold prof">Montina Lawing</h3>
+                        <p class="muli prof-text">
+                            duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue
+                            nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem
+                            insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes consuetudium lectorum.
+                        </p>
+                    </div>
             </section>
         </div>
         <div class="sidebar-content"></div>
+        </div>
     </main>
 </body>
 
