--- a/index.html
+++ b/index.html
@@ -89,126 +89,185 @@
             </div>
         </div>
     </header>
-    <main>
-        <div class="main-content">
-            <section>
-                <div class="gery-cube"></div>
-                <p class="author glacial">
-                    Posted by <span>Jessica Doen,</span> 6 October
-                    <span>
-                        <img class="heart" src="images/heart.png" alt="heart">63
-                    </span>
-                </p>
-                <article class="article-pos muli">
-                    <h2 class="article-header glacial-bold">
-                        Dr. Gulati Wants To Take A Shower - The
-                        Kapil Sharma Show
+        <main>
+            <div class="main-content">
+                <section>
+                    <div class="gery-cube"></div>
+                    <p class="author glacial">
+                        Posted by <span>Jessica Doen,</span> 6 October
+                        <span>
+                            <img class="heart" src="images/heart.png" alt="heart">63
+                        </span>
+                    </p>
+                    <article class="article-pos muli">
+                        <h2 class="article-header glacial-bold">
+                            Dr. Gulati Wants To Take A Shower - The
+                            Kapil Sharma Show
+                        </h2>
+                        <p class="par1-font par1-magrin">
+                            The European languages are members of the same family. Their separate existence is a myth. For
+                            science, music, sport, etc, Europe uses the same vocabulary. The languages only differ in their
+                            grammar, their pronunciation and their most common words. Everyone realizes why a new common
+                            language would be desirable: one could refuse to pay expensive translators. To achieve this, it
+                            would be necessary to have uniform grammar, pronunciation
+                        </p>
+                        <span class="border float-left"></span>
+                        <p class="par2-font">
+                            We are a team that working on graphic design goodies. Making mock ups, taking stock photos and
+                            preparing awesome graphic design templates.
+                        </p>
+                        <p class="par1-font par1-magrin">
+                            The European languages are members of the same family. Their separate existence is a myth. For
+                            science, music, sport, etc, Europe uses the same vocabulary. The languages only differ in their
+                            grammar, their pronunciation and their most common words. Everyone realizes why a new common
+                            language would be desirable: one could refuse to pay expensive translators. To achieve this, it
+                            would be necessary to have uniform grammar, pronunciation
+                        </p>
+                        <div class="chat modelica">
+                            <img src="images/chat-1.png" alt="chat">02
+                        </div>
+                    </article>
+                </section>
+                <section class="section-margin">
+                    <h2 class="h2-font h2-margin glacial-bold">
+                        Blog H2 Heading Title / Download Example
                     </h2>
-                    <p class="par1-font par1-magrin">
+                    <p class="muli margin-bt par1-font par1-letters">
                         The European languages are members of the same family. Their separate existence is a myth. For
                         science, music, sport, etc, Europe uses the same vocabulary. The languages only differ in their
-                        grammar, their pronunciation and their most common words. Everyone realizes why a new common
-                        language would be desirable: one could refuse to pay expensive translators. To achieve this, it
-                        would be necessary to have uniform grammar, pronunciation
+                        grammar, their pronunciation and their most common words.
                     </p>
-                    <span class="border float-left"></span>
-                    <p class="par2-font">
-                        We are a team that working on graphic design goodies. Making mock ups, taking stock photos and
-                        preparing awesome graphic design templates.
-                    </p>
-                    <p class="par1-font par1-magrin">
-                        The European languages are members of the same family. Their separate existence is a myth. For
-                        science, music, sport, etc, Europe uses the same vocabulary. The languages only differ in their
-                        grammar, their pronunciation and their most common words. Everyone realizes why a new common
-                        language would be desirable: one could refuse to pay expensive translators. To achieve this, it
-                        would be necessary to have uniform grammar, pronunciation
-                    </p>
-                    <div class="chat modelica">
-                        <img src="images/chat-1.png" alt="chat">02
+                    <div class="flex">
+                        <div>
+                            <ul class="ulist-margin glacial">
+                                <li class="list-font"><i class="fa-brands fa-font-awesome"></i>Maecenas quis nulla sit amet
+                                    mi sodales venenatis.</li>
+                                <li class="list-font"><i class="fa-brands fa-font-awesome"></i>Fusce malesuada lacus eget mi
+                                    hendrerit, in pretium</li>
+                                <li class="list-font"><i class="fa-brands fa-font-awesome"></i>felis rhoncus.</li>
+                                <li class="list-font"><i class="fa-brands fa-font-awesome"></i>Etiam hendrerit ante ornare
+                                    mauris</li>
+                                <li class="list-font"><i class="fa-brands fa-font-awesome"></i>Sed at elit vehicula, luctus
+                                    nibh vel, tincidunt tellus.</li>
+                            </ul>
+                            <button class="download-btn glacial-bold">DOWNLOAD <img src="images/Download.png"
+                                    alt="Download"></button>
+                        </div>
+                        <div>
+                            <span class="ad-font raleway">ADVERTISING</span>
+                            <div class="gradient"></div>
+                        </div>
                     </div>
-                </article>
-            </section>
-            <section class="section-margin">
-                <h2 class="h2-font h2-margin glacial-bold">
-                    Blog H2 Heading Title / Download Example
-                </h2>
-                <p class="muli margin-bt par1-font par1-letters">
-                    The European languages are members of the same family. Their separate existence is a myth. For
-                    science, music, sport, etc, Europe uses the same vocabulary. The languages only differ in their
-                    grammar, their pronunciation and their most common words.
-                </p>
-                <div class="flex">
-                    <div>
-                        <ul class="ulist-margin glacial">
-                            <li class="list-font"><i class="fa-brands fa-font-awesome"></i>Maecenas quis nulla sit amet
-                                mi sodales venenatis.</li>
-                            <li class="list-font"><i class="fa-brands fa-font-awesome"></i>Fusce malesuada lacus eget mi
-                                hendrerit, in pretium</li>
-                            <li class="list-font"><i class="fa-brands fa-font-awesome"></i>felis rhoncus.</li>
-                            <li class="list-font"><i class="fa-brands fa-font-awesome"></i>Etiam hendrerit ante ornare
-                                mauris</li>
-                            <li class="list-font"><i class="fa-brands fa-font-awesome"></i>Sed at elit vehicula, luctus
-                                nibh vel, tincidunt tellus.</li>
-                        </ul>
-                        <button class="download-btn glacial-bold">DOWNLOAD <img src="images/Download.png"
-                                alt="Download"></button>
+                </section>
+                <section>
+                    <h2 class="h2-font part5-header glacial-bold">
+                        Blog H2 Heading Title
+                    </h2>
+                    <div class="gery-cube dark"></div>
+                    <p class="muli par1-font par5-margin">
+                        The European languages are members of the same family. Their separate existence is a myth. For
+                        science, music, sport, etc, Europe uses the same vocabulary. The languages only differ in their
+                        grammar, their pronunciation and their most common words. Everyone realizes why a new common
+                        language would be desirable: one could refuse to pay expensive translators. To achieve this, it
+                        would be necessary to have uniform grammar, pronunciation and more common words. If several
+                        languages coalesce, the grammar of the resulting language is more simple and regular than that of
+                        the individual languages. The new common language will be more simple and regular than the existing
+                        European languages. It will be as simple as Occidental; in fact, it will be Occidental. To an
+                        English person, it will seem like simplified English, as a skeptical Cambridge friend of mine told
+                        me what Occidental is.The European languages are members of the same family. Their separate
+                        existence is a myth. guages only differ in their grammar, their pronunciation and their most common
+                        words. Everyone realizes why a new common language would be
+                    </p>
+                    <div class="soc-links flex glacial">
+                        <div class="soc-box"><i class="fa-brands fa-facebook-f"></i>Facebook</div>
+                        <div class="soc-box"><i class="fa-brands fa-twitter"></i>twitter</div>
+                        <div class="soc-box"><i class="fa-brands fa-google-plus-g"></i>google plus</div>
+                        <div class="soc-box"><i class="fa-brands fa-pinterest-p"></i>pinterest</div>
+                    </div>
+                </section>
+                <section class="width">
+                    <div class="note flex">
+                        <div class="flex">
+                            <img src="images/note.png" alt="note">
+                            <p class="muli">Elegant, Responsive, Web Design, PSD Template</p>
+                        </div>
+                        <span class="glacial">Back to top</span>
+                    </div>
+                    <div class="grey-line"></div>
+                    <div class="profile flex">
+                        <div class="grey-circle"></div>
+                        <div class="profile-info">
+                            <h3 class="glacial-bold prof">Montina Lawing</h3>
+                            <p class="muli prof-text">
+                                duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue
+                                nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem
+                                insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes consuetudium lectorum.
+                            </p>
+                        </div>
+                    </div> 
+                </section>
+                <section class="width">
+                    <div class="line line-margin"></div>  
+                    <h2 class="subheader-font glacial-bold">Related articles</h2>
+                    <div class="grid">
+                        <div class="grid-child flex">
+                            <div class="small-cube"></div>
+                            <div class="info-cube">
+                                <p class="glacial-bold date-font">
+                                    <i class="fa-solid fa-clock"></i> December 31, 2020 <i class="fa-solid fa-eye"></i>
+                                    <span class="glacial date-font">36</span> 
+                                </p>
+                                <p class="glacial-bold note-font">
+                                    All community members are eligible to enter thisage
+                                </p>
+                            </div>
+                        </div>
+                        <div class="grid-child flex">
+                            <div class="small-cube"></div>
+                            <div class="info-cube">
+                                <p class="glacial-bold date-font">
+                                    <i class="fa-solid fa-clock"></i> December 31, 2020 <i class="fa-solid fa-eye"></i>
+                                    <span class="glacial date-font">36</span> 
+                                </p>
+                                <p class="glacial-bold note-font">
+                                    All community members are eligible to enter thisage
+                                </p>
+                            </div>
+                        </div>
+                        <div class="grid-child flex">
+                            <div class="small-cube"></div>
+                            <div class="info-cube">
+                                <p class="glacial-bold date-font">
+                                    <i class="fa-solid fa-clock"></i> December 31, 2020 <i class="fa-solid fa-eye"></i>
+                                    <span class="glacial date-font">36</span> 
+                                </p>
+                                <p class="glacial-bold note-font">
+                                    All community members are eligible to enter thisage
+                                </p>
+                            </div>
+                        </div>
+                        <div class="grid-child flex">
+                            <div class="small-cube"></div>
+                            <div class="info-cube">
+                                <p class="glacial-bold date-font">
+                                    <i class="fa-solid fa-clock"></i> December 31, 2020 <i class="fa-solid fa-eye"></i>
+                                    <span class="glacial date-font">36</span> 
+                                </p>
+                                <p class="glacial-bold note-font">
+                                    All community members are eligible to enter thisage
+                                </p>
+                            </div>
+                        </div>
                     </div>
                     <div>
                         <span class="ad-font raleway">ADVERTISING</span>
-                        <div class="gradient"></div>
+                        <div class="gradient wide"></div>
                     </div>
-                </div>
-            </section>
-            <section>
-                <h2 class="h2-font part5-header glacial-bold">
-                    Blog H2 Heading Title
-                </h2>
-                <div class="gery-cube dark"></div>
-                <p class="muli par1-font par5-margin">
-                    The European languages are members of the same family. Their separate existence is a myth. For
-                    science, music, sport, etc, Europe uses the same vocabulary. The languages only differ in their
-                    grammar, their pronunciation and their most common words. Everyone realizes why a new common
-                    language would be desirable: one could refuse to pay expensive translators. To achieve this, it
-                    would be necessary to have uniform grammar, pronunciation and more common words. If several
-                    languages coalesce, the grammar of the resulting language is more simple and regular than that of
-                    the individual languages. The new common language will be more simple and regular than the existing
-                    European languages. It will be as simple as Occidental; in fact, it will be Occidental. To an
-                    English person, it will seem like simplified English, as a skeptical Cambridge friend of mine told
-                    me what Occidental is.The European languages are members of the same family. Their separate
-                    existence is a myth. guages only differ in their grammar, their pronunciation and their most common
-                    words. Everyone realizes why a new common language would be
-                </p>
-                <div class="soc-links flex glacial">
-                    <div class="soc-box"><i class="fa-brands fa-facebook-f"></i>Facebook</div>
-                    <div class="soc-box"><i class="fa-brands fa-twitter"></i>twitter</div>
-                    <div class="soc-box"><i class="fa-brands fa-google-plus-g"></i>google plus</div>
-                    <div class="soc-box"><i class="fa-brands fa-pinterest-p"></i>pinterest</div>
-                </div>
-            </section>
-            <section>
-                <div class="note flex">
-                    <div class="flex">
-                        <img src="images/note.png" alt="note">
-                        <p class="muli">Elegant, Responsive, Web Design, PSD Template</p>
-                    </div>
-                    <span class="glacial">Back to top</span>
-                </div>
-                <div class="grey-line"></div>
-                <div class="profile flex">
-                    <div class="grey-circle"></div>
-                    <div class="profile-info">
-                        <h3 class="glacial-bold prof">Montina Lawing</h3>
-                        <p class="muli prof-text">
-                            duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue
-                            nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem
-                            insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes consuetudium lectorum.
-                        </p>
-                    </div>
-            </section>
-        </div>
-        <div class="sidebar-content"></div>
-        </div>
-    </main>
+                </section>
+            </div>
+            <div class="sidebar-content"></div>
+        </main>
+        
 </body>
 
 </html>
