--- a/index.html
+++ b/index.html
@@ -424,6 +424,22 @@
                     </div>
                 </div>
             </section>
+            <section class="width">
+                <h2 class="glacial-bold comment-header header-font">COMMENTS</h2>
+                <form class="flex muli">
+                    <input class="input-style size" type="text" name="name" id="name" placeholder="Name">
+                    <input class="input-style size" type="email" name="mail" id="mail" placeholder="Email">
+                    <input class="input-style size" type="url" name="website" id="website" placeholder="Website">
+                    <textarea class="input-style" name="text" id="text" placeholder="@mexo"></textarea>
+                    <div class="flex submit">
+                        <button class="submit-btn glacial-bold" type="submit">SUBMIT NOW</button>
+                        <div class="flex">
+                            <input class="checkbox" type="checkbox" name="convo" id="convo">
+                            <label class="muli" for="convo">Subscribe This Conversation</label>
+                        </div>
+                    </div>
+                </form>
+            </section>
         </div>
         <div class="sidebar-content"></div>
     </main>
