--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;800&family=Raleway:wght@800&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;800&family=Raleway:wght@800&display=swap"
         rel="stylesheet">
 </head>
 
@@ -443,7 +444,74 @@
         </div>
         <div class="sidebar-content"></div>
     </main>
+    <footer>
+        <div class="footer">
+            <div>
+                <h2 class="poppins footer-header">Noxia<span>.</span></h2>
+                <p class="muli footer-par">
+                    Fusce dapibus, tellus ac cursus commodo, tortor mauris, ut fermentum massa justo sit amet risus.
+                    Curabitur blandit tempus porttitor nullam quis.
+                </p>
+                <span class="glacial-bold about-us">ABOUT US</span>
+            </div>
+            <div>
+                <h3 class="glacial-bold footer-subheader">Recent news</h3>
+                <div class="sub-par">
+                    <p class="glacial-bold">
+                        Narrow Your Focus to Prevent Overanalysis
+                    </p>
+                    <span class="open-sans"><i class="fa-solid fa-clock"></i> March 18, 2015</span>
+                </div>
+                <div class="sub-par">
+                    <p class="glacial-bold">
+                        Three Social Media Hacks for the Busy Entrepreneur
+                    </p>
+                    <span class="open-sans"><i class="fa-solid fa-clock"></i> March 18, 2015</span>
+                </div>
+            </div>
+            <div>
+                <h3 class="glacial-bold footer-subheader">Twitter feed</h3>
+                <div class="poppins framework">
+                    <p class="subpar-font">MexFrameworks</p>
+                    <span class="framework-span sub-par">@mexo</span>
+                </div>
+                <p class="muli sub-par">
+                    Awesome news! Bears theme is already available on themeforest! Click
+                </p>
+                <span class="muli flex twitter-date"><img src="images/clock.png" alt="clock"> 07 March, 2017</span>
+            </div>
+            <div>
+                <h3 class="glacial-bold footer-subheader">Our Contacts</h3>
+                <p class="muli sub-par">
+                    Aenean et velit vitae leo vestibulum a nec tortor rutrum tellus urna.
+                </p>
+                <div class="muli contact-links">
+                    <span class="subpar-font">Email:</span>
+                    <a class="sub-par" href="mailto:BmeioxFramework@gmail.com">BmeioxFramework@gmail.com</a>
+                    <span class="subpar-font">Phone:</span>
+                    <a class="sub-par" href="#">212-962-0125 or 212-962-8217</a>
+                </div>
 
+                <div class="flex icons">
+                    <div class="flex">
+                        <img src="images/Vimeo.png" alt="Vimeo">
+                    </div>
+                    <div class="flex">
+                        <img src="images/Facebook.png" alt="facebook">
+                    </div>
+                    <div class="flex">
+                        <img src="images/Twitter.png" alt="twitter">
+                    </div>
+                    <div class="flex">
+                        <img src="images/Google-Plus.png" alt="Google-Plus">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="flex center open-sans sub-par">
+            <span>© All Rights Reserved mexopixel</span>
+        </div>
+    </footer>
 </body>
 
 </html>
