--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="css/part-8.css">
     <link rel="stylesheet" href="css/part-9.css">
     <link rel="stylesheet" href="css/part-10.css">
+    <link rel="stylesheet" href="css/part-11.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -442,7 +443,16 @@
                 </form>
             </section>
         </div>
-        <div class="sidebar-content"></div>
+        <div class="sidebar-content">
+            <section class="muli">
+                <h3 class="glacial-bold sidebar-h border-btm">Looking For A First</h3>
+                <p class="border-btm">Company overview</p>
+                <p class="border-btm">Careers</p>
+                <p class="border-btm">Company History</p>
+                <p class="border-btm">Our approach</p>
+                <p>Parthers</p>
+            </section>
+        </div>
     </main>
     <footer>
         <div class="footer">
