--- a/index.html
+++ b/index.html
@@ -19,14 +19,13 @@
     <link rel="stylesheet" href="css/part-9.css">
     <link rel="stylesheet" href="css/part-10.css">
     <link rel="stylesheet" href="css/part-11.css">
+    <link rel="stylesheet" href="css/part-12.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;800&family=Raleway:wght@800&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cambay&family=Open+Sans&family=Poppins:wght@400;800&family=Raleway:wght@800&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -446,11 +445,39 @@
         <div class="sidebar-content">
             <section class="muli">
                 <h3 class="glacial-bold sidebar-h border-btm">Looking For A First</h3>
-                <p class="border-btm">Company overview</p>
+                <p class="border-btm light-grey">Company overview</p>
                 <p class="border-btm">Careers</p>
                 <p class="border-btm">Company History</p>
                 <p class="border-btm">Our approach</p>
                 <p>Parthers</p>
+            </section>
+            <section>
+                <h3 class="glacial-bold sidebar-h border-btm">Latest News</h3>
+                <div class="flex">
+                    <img src="images/1.png" alt="people">
+                    <div class="content-width">
+                        <span class="muli grey-font line-height1">29 October</span>
+                        <span class="glacial-bold black-font">Post with Gallery</span>
+                        <span class="cambay blue-font">Robin Miles</span>
+                    </div>
+                </div>
+                <div class="flex">
+                    <img src="images/2.png" alt="people">
+                    <div class="content-width">
+                        <span class="muli grey-font line-height2">6 October</span>
+                        <span class="glacial-bold black-font margin-top">Video Post Format</span>
+                        <span class="cambay blue-font">Jonathan Miller</span>
+                    </div>
+                </div>
+                <div class="flex">
+                    <img src="images/3.png" alt="people">
+                    <div class="content-width">
+                        <span class="muli grey-font line-height2">23 September</span>
+                        <span class="glacial-bold black-font margin-top">Audio Post Format</span>
+                        <span class="cambay blue-font">Admin</span>
+                    </div>
+                </div>
+                <button class="small-btn glacial-bold">ALL NEWS</button>
             </section>
         </div>
     </main>
