--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="css/part-10.css">
     <link rel="stylesheet" href="css/part-11.css">
     <link rel="stylesheet" href="css/part-12.css">
+    <link rel="stylesheet" href="css/part-13.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -478,6 +479,20 @@
                     </div>
                 </div>
                 <button class="small-btn glacial-bold">ALL NEWS</button>
+            </section>
+            <section>
+                <h3 class="glacial-bold sidebar-h border-btm">Latest</h3>
+                <div>
+                    <p class="muli">Mock-Ups</p>
+                    <p class="muli">UI</p>
+                    <p class="muli">Websites</p>
+                    <p class="muli">PSD Templates</p>
+                    <p class="muli">Branding</p>
+                    <p class="muli">WordPress</p>
+                    <p class="muli">Graphic Design</p>
+                    <p class="muli">UI Kit</p>
+                    <p class="muli">Development</p>
+                </div>
             </section>
         </div>
     </main>
