--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="css/part-11.css">
     <link rel="stylesheet" href="css/part-12.css">
     <link rel="stylesheet" href="css/part-13.css">
+    <link rel="stylesheet" href="css/part-14.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -493,6 +494,18 @@
                     <p class="muli">UI Kit</p>
                     <p class="muli">Development</p>
                 </div>
+            </section>
+            <section>
+                <h3 class="poppins">Noxia<span>.</span></h3>
+                <p class="muli">
+                    Claritas est etiam processus dynamicus, qui sequitur mutationem
+                </p>
+                <ul class="glacial">
+                    <li><img src="images/location.png" alt="location"><a class="glacial-bold" href="https://goo.gl/maps/X6aaLEFCbUYDRcZ8A">London, UK 441</a></li>
+                    <li><img src="images/phone.png" alt="phone"><a href="tel:+75262552526"><span class="glacial-bold">Phone:</span> +7 526 255 25 26</a></li>
+                    <li><img src="images/email.png" alt="email"><a href="mailto:info@example.com"><span class="glacial-bold">Email:</span> info@example.com</a></li>
+                </ul>
+                <button class="small-btn glacial-bold new-size">CONTACT</button>
             </section>
         </div>
     </main>
