--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>project</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/fonts.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/part-1.css">
     <link rel="stylesheet" href="css/part-2.css">
     <link rel="stylesheet" href="css/part-3.css">
@@ -22,25 +23,26 @@
     <link rel="stylesheet" href="css/part-12.css">
     <link rel="stylesheet" href="css/part-13.css">
     <link rel="stylesheet" href="css/part-14.css">
+    <link rel="stylesheet" href="css/part-15.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cambay&family=Open+Sans&family=Poppins:wght@400;800&family=Raleway:wght@800&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Cambay&family=Open+Sans&family=Poppins:wght@400;800&family=Raleway:wght@800&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <header>
         <div class="max-width flex">
-            <!-- mail and phone -->
             <ul class="contact-size flex muli">
                 <li><img class="mail" src="images/mail.png" alt="mail"><a class="font-style"
                         href="mailto:hello@mexo.com">hello@mexo.com</a></li>
                 <li><img class="tel" src="images/tel.png" alt="tel"><a class="font-style" href="tel:+8 800 567.890.11">8
                         800 567.890.11</a></li>
             </ul>
-            <!-- social links -->
             <ul class="icon-box flex">
                 <li class="icon-li">
                     <a class="icon-font" href="https://www.facebook.com/" target="_blank">
@@ -501,11 +503,48 @@
                     Claritas est etiam processus dynamicus, qui sequitur mutationem
                 </p>
                 <ul class="glacial">
-                    <li><img src="images/location.png" alt="location"><a class="glacial-bold" href="https://goo.gl/maps/X6aaLEFCbUYDRcZ8A">London, UK 441</a></li>
-                    <li><img src="images/phone.png" alt="phone"><a href="tel:+75262552526"><span class="glacial-bold">Phone:</span> +7 526 255 25 26</a></li>
-                    <li><img src="images/email.png" alt="email"><a href="mailto:info@example.com"><span class="glacial-bold">Email:</span> info@example.com</a></li>
+                    <li><img src="images/location.png" alt="location"><a class="glacial-bold"
+                            href="https://goo.gl/maps/X6aaLEFCbUYDRcZ8A">London, UK 441</a></li>
+                    <li><img src="images/phone.png" alt="phone"><a href="tel:+75262552526"><span
+                                class="glacial-bold">Phone:</span> +7 526 255 25 26</a></li>
+                    <li><img src="images/email.png" alt="email"><a href="mailto:info@example.com"><span
+                                class="glacial-bold">Email:</span> info@example.com</a></li>
                 </ul>
                 <button class="small-btn glacial-bold new-size">CONTACT</button>
+            </section>
+            <section>
+                <div class="flex admin">
+                    <div class="admin-profile"></div>
+                    <div class="author-width">
+                        <p class="cambay">Posted by</p>
+                        <p class="glacial-bold">Jonathan Miller</p>
+                    </div>
+                </div>
+                <p class="muli admin-par">
+                    Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est
+                    notare quam littera gothica,
+                </p>
+                <ul class="icon-box flex">
+                    <li class="icon-li">
+                        <a class="icon-font" href="https://www.facebook.com/" target="_blank">
+                            <i class="fa-brands fa-facebook-f"></i>
+                        </a>
+                    </li>
+                    <li class="icon-li">
+                        <a class="icon-font" href="https://twitter.com/" target="_blank">
+                            <i class="fa-brands fa-twitter"></i>
+                        </a>
+                    </li>
+                    <li class="icon-li">
+                        <a class="icon-font" href="https://plus.google.com/" target="_blank">
+                            <i class="fa-brands fa-google-plus-g"></i>
+                        </a>
+                    </li>
+                    <li class="icon-li">
+                        <a class="icon-font" href="https://www.pinterest.com/" target="_blank">
+                            <i class="fa-brands fa-pinterest-p"></i>                        </a>
+                    </li>
+                </ul>
             </section>
         </div>
     </main>
